--- a/Anabasis.Deployment.Tests/kustomize/prod/kustomization.yaml
+++ b/Anabasis.Deployment.Tests/kustomize/prod/kustomization.yaml
@@ -2,4 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - config.group.yaml
+  - ../base
+
+patchesStrategicMerge:
+  - service.yaml
+  - deployment.yaml
