--- a/Anabasis.Deployment.Test.App/kustomize/base/deployment.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/base/deployment.yaml
@@ -4,21 +4,21 @@ metadata:
   labels:
     app: anabasis-deployment-test-app
     release: 1.0.67
-    group: anabasis-test-group
+    group: AppGroup
   name: anabasis-deployment-test-app
-  namespace: anabasis-test-group
+  namespace: AppGroup
 spec:
   selector:
     matchLabels:
       app: anabasis-deployment-test-app
       release: 1.0.67
-      group: anabasis-test-group
+      group: AppGroup
   template:
     metadata:
       labels:
         app: anabasis-deployment-test-app
         release: 1.0.67
-        group: anabasis-test-group
+        group: AppGroup
     spec:
       containers:
       - env:
