--- a/Anabasis.Deployment.Test.App/kustomize/base/namespace.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/base/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    group: anabasis-test-group
-  name: anabasis-test-group
+    group: AppGroup
+  name: AppGroup
