--- a/Anabasis.Common/Anabasis.Common.csproj
+++ b/Anabasis.Common/Anabasis.Common.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <OutputType>Library</OutputType>
+    <LangVersion>Latest</LangVersion>
+    <Platforms>AnyCPU;x64</Platforms>
+    <PackageProjectUrl>https://github.com/thomasraynal/Anabasis.EventStore</PackageProjectUrl>
+    <Description>Bootstrap actor based applications with EventStore and DynamicData</Description>
+    <PackageTags>DynamicData;EventStore;EventSourcing;CQRS;Actors</PackageTags>
+    <Authors>Thomas Raynal</Authors>
+    <Company />
+    <Product />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
