--- a/Anabasis.Deployment/kustomize/kustomization.yaml
+++ b/Anabasis.Deployment/kustomize/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - ../base
 
-patchesStrategicMerge:
-  - deployment.yaml
+#patchesStrategicMerge:
+#  - deployment.yaml
