--- a/Anabasis.Deployment/kustomize/templates/namespace.yaml
+++ b/Anabasis.Deployment/kustomize/templates/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    group: anabasis-test-group
-  name: anabasis-test-group
+    group: unknown-group
+  name: unknown-namespace
