--- a/Anabasis.Api/Anabasis.Api.csproj
+++ b/Anabasis.Api/Anabasis.Api.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="Sentry.Serilog" Version="3.11.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
-
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />    
   </ItemGroup>
 
   <ItemGroup>
