--- a/Anabasis.Deployment/Anabasis.Deployment.csproj
+++ b/Anabasis.Deployment/Anabasis.Deployment.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Nuke.Common" Version="6.0.1" />
     <PackageReference Include="KubernetesClient" Version="6.0.1" />
     <PackageReference Include="GitVersion.CommandLine.DotNetCore" Version="5.0.1">
