--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,9 @@ environment:
 branches:
   only:
     - master
+before_build:
+- cmd: docker-compose down
+- cmd: docker-compose up
 nuget:
   disable_publish_on_pr: true
 build_script:
