--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,20 +14,29 @@ environment:
 branches:
   only:
     - master
-before_build:
-- cmd: docker-compose down
-- cmd: docker-compose up
-nuget:
-  disable_publish_on_pr: true
-build_script:
-- cmd: dotnet msbuild /restore  /p:Configuration=Release /p:version=%APPVEYOR_BUILD_VERSION% -verbosity:minimal %SOLUTION_NAME%.sln
-after_test:
-- cmd: appveyor PushArtifact %APPVEYOR_BUILD_FOLDER%\%SOLUTION_NAME%\bin\Release\%SOLUTION_NAME%.%APPVEYOR_BUILD_VERSION%.nupkg
-test: off
-test_script:
-- cmd: |
-   cd %APPVEYOR_BUILD_FOLDER%
-   dotnet test Anabasis.EventStore.Tests\Anabasis.EventStore.Tests.csproj --configuration Release --no-build --no-restore
+#before_build:
+#- cmd: docker-compose down
+#- cmd: docker-compose up
+#nuget:
+#  disable_publish_on_pr: true
+#build_script:
+#- cmd: dotnet msbuild /restore  /p:Configuration=Release /p:version=%APPVEYOR_BUILD_VERSION% -verbosity:minimal %SOLUTION_NAME%.sln
+#after_test:
+#- cmd: appveyor PushArtifact %APPVEYOR_BUILD_FOLDER%\%SOLUTION_NAME%\bin\Release\%SOLUTION_NAME%.%APPVEYOR_BUILD_VERSION%.nupkg
+
+ #test:
+ #  assemblies:
+ #    only:
+ #      - '**\*.Tests.dll'
+ #  categories:
+ #    except:
+ #      - Integration
+
+#test: off
+#test_script:
+#- cmd: |
+#   cd %APPVEYOR_BUILD_FOLDER%
+#   dotnet test Anabasis.EventStore.Tests\Anabasis.EventStore.Tests.csproj --configuration Release --no-build --no-restore
 # test_script:
 # - ps: |
 #       if ($env:SOLUTION_NAME -eq "Anabasis.EventStore")
@@ -49,11 +58,11 @@ test_script:
 #- cmd: |
 #    cd %APPVEYOR_BUILD_FOLDER%
 #    dotnet test Anabasis.EventStore.Tests\Anabasis.EventStore.Tests.csproj --configuration Release --no-build --no-restore
-deploy:
-  provider: NuGet
-  api_key:
-    secure: zuIMF/Jd5yeqbYdq9HDfTniovjEbGuRKqkBO6KrZpCiR/gjfqAgbSWhcp9htTzhb
-  skip_symbols: false
-  artifact: /.*\.nupkg/
-  on:
-    branch: master
+#deploy:
+#  provider: NuGet
+#  api_key:
+#    secure: zuIMF/Jd5yeqbYdq9HDfTniovjEbGuRKqkBO6KrZpCiR/gjfqAgbSWhcp9htTzhb
+#  skip_symbols: false
+#  artifact: /.*\.nupkg/
+#  on:
+#    branch: master
