--- a/Anabasis.Deployment.Test.App/kustomize/prod/kustomization.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/prod/kustomization.yaml
@@ -4,6 +4,5 @@ kind: Kustomization
 resources:
   - ../base
 
-patchesStrategicMerge:
-  - service.yaml
-  - deployment.yaml
+#patchesStrategicMerge:
+#  - deployment.yaml
