--- a/Anabasis.Api.Tests.Common/Anabasis.Api.Tests.Common.csproj
+++ b/Anabasis.Api.Tests.Common/Anabasis.Api.Tests.Common.csproj
@@ -1,20 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Anabasis.Api.Tests.Common\Anabasis.Api.Tests.Common.csproj" />
-    <ProjectReference Include="..\Anabasis.EntityFramework\Anabasis.EntityFramework.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="docker-compose.yaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.13">
@@ -27,8 +15,6 @@
 
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+
 
 </Project>
