--- a/Anabasis.Common/Anabasis.Common.csproj
+++ b/Anabasis.Common/Anabasis.Common.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
