--- a/Anabasis.RabbitMQ.Tests.Integration/Anabasis.RabbitMQ.Tests.Integration.csproj
+++ b/Anabasis.RabbitMQ.Tests.Integration/Anabasis.RabbitMQ.Tests.Integration.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Platforms>AnyCPU</Platforms>
+    <LangVersion>Latest</LangVersion>
    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
