--- a/Anabasis.RabbitMQ.Tests.Integration/Anabasis.RabbitMQ.Tests.Integration.csproj
+++ b/Anabasis.RabbitMQ.Tests.Integration/Anabasis.RabbitMQ.Tests.Integration.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Anabasis.EventStore.Tests\Anabasis.EventStore.Tests.csproj" />
+    <ProjectReference Include="..\Anabasis.EventStore.Demo.Standalone\Anabasis.EventStore.Demo.Standalone.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
     <ProjectReference Include="..\Anabasis.RabbitMQ\Anabasis.RabbitMQ.csproj" />
   </ItemGroup>
