create embedded es assemblies

--- a/Anabasis.EventStore.Samples/Anabasis.EventStore.Samples.csproj
+++ b/Anabasis.EventStore.Samples/Anabasis.EventStore.Samples.csproj
@@ -8,7 +8,9 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\Anabasis.EventStore.Embedded\Anabasis.EventStore.Embedded.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore.Snapshot.InMemory\Anabasis.EventStore.Snapshot.InMemory.csproj" />
+    <ProjectReference Include="..\Anabasis.EventStore.Standalone.Embedded\Anabasis.EventStore.Standalone.Embedded.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore.Standalone\Anabasis.EventStore.Standalone.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
   </ItemGroup>
