--- a/Anabasis.EventStore.Demo.Standalone/Anabasis.EventStore.Demo.Standalone.csproj
+++ b/Anabasis.EventStore.Demo.Standalone/Anabasis.EventStore.Demo.Standalone.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Anabasis.EventStore.Demo\Anabasis.EventStore.Demo.csproj" />
-    <ProjectReference Include="..\Anabasis.EventStore.Standalone\Anabasis.EventStore.Standalone.csproj" />
+    <ProjectReference Include="..\Anabasis.EventStore.Standalone.Embedded\Anabasis.EventStore.Standalone.Embedded.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
     <ProjectReference Include="..\Anabasis.RabbitMQ\Anabasis.RabbitMQ.csproj" />
   </ItemGroup>
