create embedded es assemblies 2

--- a/Anabasis.EventStore.AspNet.Embedded/Anabasis.EventStore.AspNet.Embedded.csproj
+++ b/Anabasis.EventStore.AspNet.Embedded/Anabasis.EventStore.AspNet.Embedded.csproj
@@ -20,6 +20,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\Anabasis.EventStore.AspNet\Anabasis.EventStore.AspNet.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
   </ItemGroup>
 
