--- a/Anabasis.EventStore.Demo.AspNet/Anabasis.EventStore.Demo.AspNet.csproj
+++ b/Anabasis.EventStore.Demo.AspNet/Anabasis.EventStore.Demo.AspNet.csproj
@@ -19,6 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="config.app.production.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="config.app.development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="config.app.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
