env on kustomize

--- a/Anabasis.Deployment/kustomize/kustomization.yaml
+++ b/Anabasis.Deployment/kustomize/kustomization.yaml
@@ -4,5 +4,12 @@ kind: Kustomization
 resources:
   - ../base
 
-#patchesStrategicMerge:
-#  - deployment.yaml
+patches:
+- patch: |-
+    - op: add
+      path: "/spec/template/spec/containers/0/env/-"
+      value:
+        name: ASPNETCORE_ENVIRONMENT
+        value: "{{ANABASIS_ENVIRONMENT}}"
+  target:
+    kind: Deployment
