--- a/Anabasis.Deployment/kustomize/templates/service.yaml
+++ b/Anabasis.Deployment/kustomize/templates/service.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   labels:
     release: 1.0.67
-  name: svc-anabasis-test-group
-  namespace: anabasis-test-group
+  name: svc-unknown-name
+  namespace: unknown-namespace
 spec:
   ports:
   - name: http
@@ -12,6 +12,6 @@ spec:
     protocol: TCP
     targetPort: http
   selector:
-    app: anabasis-deployment-test-app
+    app: unknown-name
     release: 1.0.67
   type: ClusterIP
