add docker file to package

--- a/Anabasis.Deployment/Anabasis.Deployment.csproj
+++ b/Anabasis.Deployment/Anabasis.Deployment.csproj
@@ -65,6 +65,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <PackageCopyToOutput>true</PackageCopyToOutput>
     </None>
+    <None Update="docker\dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </None>
   </ItemGroup>
 
 </Project>
