--- a/Anabasis.Common/Anabasis.Common.csproj
+++ b/Anabasis.Common/Anabasis.Common.csproj
@@ -12,6 +12,8 @@
     <Company />
     <Product />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Nullable>enable</Nullable>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
   </PropertyGroup>
 
   <ItemGroup>
