--- a/Anabasis.EventStore.Standalone/Anabasis.EventStore.Standalone.csproj
+++ b/Anabasis.EventStore.Standalone/Anabasis.EventStore.Standalone.csproj
@@ -11,6 +11,7 @@
     <Company />
     <Product />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
   
   <ItemGroup>
