--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: '3.2'
  
 services:
-  sqlserver:
-    image: "mcr.microsoft.com/mssql/server:2019-CU14-ubuntu-20.04"
-    environment:
-        SA_PASSWORD: "Your_password123"
-        ACCEPT_EULA: "Y"
-    ports:
-        - "5434:1433"
+  #sqlserver:
+  #  image: "mcr.microsoft.com/mssql/server:2019-CU14-ubuntu-20.04"
+  #  environment:
+  #      SA_PASSWORD: "Your_password123"
+  #      ACCEPT_EULA: "Y"
+  #  ports:
+  #      - "5434:1433"
   rabbitmq:
     hostname: rabbit
     image: docker.io/bitnami/rabbitmq:3.9
@@ -26,21 +26,21 @@ services:
       - RABBITMQ_COMMUNITY_PLUGINS= https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/3.9.0/rabbitmq_delayed_message_exchange-3.9.0.ez
     volumes:
       - 'rabbitmq_data:/bitnami/rabbitmq/mnesia'
-  eventstore.db:
-    image: eventstore/eventstore:21.10.1-bionic
-    environment:
-      - EVENTSTORE_CLUSTER_SIZE=1
-      - EVENTSTORE_RUN_PROJECTIONS=All
-      - EVENTSTORE_START_STANDARD_PROJECTIONS=true
-      - EVENTSTORE_EXT_TCP_PORT=1113
-      - EVENTSTORE_HTTP_PORT=2113
-      - EVENTSTORE_INSECURE=true
-      - EVENTSTORE_ENABLE_EXTERNAL_TCP=true
-      - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
-      - EVENTSTORE_MEM_DB=true
-    ports:
-      - "1113:1113"
-      - "2113:2113"
+  #eventstore.db:
+  #  image: eventstore/eventstore:21.10.1-bionic
+  #  environment:
+  #    - EVENTSTORE_CLUSTER_SIZE=1
+  #    - EVENTSTORE_RUN_PROJECTIONS=All
+  #    - EVENTSTORE_START_STANDARD_PROJECTIONS=true
+  #    - EVENTSTORE_EXT_TCP_PORT=1113
+  #    - EVENTSTORE_HTTP_PORT=2113
+  #    - EVENTSTORE_INSECURE=true
+  #    - EVENTSTORE_ENABLE_EXTERNAL_TCP=true
+  #    - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
+  #    - EVENTSTORE_MEM_DB=true
+  #  ports:
+  #    - "1113:1113"
+  #    - "2113:2113"
 volumes:
   rabbitmq_data:
     driver: local
