--- a/Anabasis.EventHubs/Anabasis.EventHubs.csproj
+++ b/Anabasis.EventHubs/Anabasis.EventHubs.csproj
@@ -5,4 +5,10 @@
 	<Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Azure.EventHubs" Version="4.3.2" />
+		<PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="4.3.2" />
+		<PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
+	</ItemGroup>
+
 </Project>
