--- a/Anabasis.EventHubs/Anabasis.EventHubs.csproj
+++ b/Anabasis.EventHubs/Anabasis.EventHubs.csproj
@@ -11,4 +11,8 @@
 		<PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+	</ItemGroup>
+
 </Project>
