--- a/Anabasis.EventHubs/Anabasis.EventHubs.csproj
+++ b/Anabasis.EventHubs/Anabasis.EventHubs.csproj
@@ -6,9 +6,11 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
 		<PackageReference Include="Microsoft.Azure.EventHubs" Version="4.3.2" />
 		<PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="4.3.2" />
 		<PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
+		<PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
 	</ItemGroup>
 
 	<ItemGroup>
