--- a/Anabasis.Worker.Tests/Anabasis.Worker.Tests.csproj
+++ b/Anabasis.Worker.Tests/Anabasis.Worker.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -13,9 +13,5 @@
 		<PackageReference Include="NUnit" Version="3.13.1" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
 	</ItemGroup>
-
-	<ItemGroup>
-    <ProjectReference Include="..\Anabasis.Worker\Anabasis.Worker.csproj" />
-  </ItemGroup>
 
 </Project>
