--- a/Anabasis.Worker.Tests/Anabasis.Worker.Tests.csproj
+++ b/Anabasis.Worker.Tests/Anabasis.Worker.Tests.csproj
@@ -14,4 +14,9 @@
 		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+	</ItemGroup>
+
 </Project>
