--- a/Anabasis.EventHubs.Tests.Integration/Anabasis.EventHubs.Tests.Integration.csproj
+++ b/Anabasis.EventHubs.Tests.Integration/Anabasis.EventHubs.Tests.Integration.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
 	  <ProjectReference Include="..\Anabasis.EventHubs2\Anabasis.EventHubs2.csproj" />
 	</ItemGroup>
 
