--- a/Anabasis.EventHubs.Tests.Integration/Anabasis.EventHubs.Tests.Integration.csproj
+++ b/Anabasis.EventHubs.Tests.Integration/Anabasis.EventHubs.Tests.Integration.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -14,7 +14,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
-	  <ProjectReference Include="..\Anabasis.EventHubs2\Anabasis.EventHubs2.csproj" />
+	  <ProjectReference Include="..\Anabasis.EventHubs\Anabasis.EventHubs.csproj" />
 	</ItemGroup>
 
 
