--- a/Anabasis.EventHubs/Anabasis.EventHubs.csproj
+++ b/Anabasis.EventHubs/Anabasis.EventHubs.csproj
@@ -1,20 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-	<Nullable>enable</Nullable>
+	  <RootNamespace>Anabasis.EventHubs</RootNamespace>
+	  <TargetFramework>net5.0</TargetFramework>
+	  <LangVersion>Latest</LangVersion>
+	  <Platforms>AnyCPU;x64</Platforms>
+	  <PackageProjectUrl>https://github.com/thomasraynal/Anabasis.EventStore</PackageProjectUrl>
+	  <Description>Bootstrap actor based applications with EventStore and DynamicData</Description>
+	  <PackageTags>DynamicData;EventStore;EventSourcing;CQRS;Actors</PackageTags>
+	  <Authors>Thomas Raynal</Authors>
+	  <Company />
+	  <Product />
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Nullable>enable</Nullable>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
-		<PackageReference Include="Microsoft.Azure.EventHubs" Version="4.3.2" />
-		<PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="4.3.2" />
-		<PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
-		<PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.7.2" />
+    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.7.2" />
+	<PackageReference Include="Azure.Data.Tables" Version="12.5.0" />
+	<PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
+  </ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+  </ItemGroup>
 
 </Project>
