--- a/Anabasis.EventStore2/Anabasis.EventStore2.csproj
+++ b/Anabasis.EventStore2/Anabasis.EventStore2.csproj
@@ -5,10 +5,23 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="EventStore.Client" Version="20.10.0" />
+		<PackageReference Include="EventStore.Client.Embedded" Version="20.6.0" />
+		<PackageReference Include="EventStore.Client" Version="21.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+		<PackageReference Include="EventStore.Client" Version="21.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.12" />
+		<PackageReference Include="Microsoft.Reactive.Testing" Version="5.0.0" />
+		<PackageReference Include="morelinq" Version="3.3.2" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+		<PackageReference Include="NSubstitute" Version="4.3.0" />
+		<PackageReference Include="NUnit" Version="3.13.1" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+		<PackageReference Include="Serilog.Sinks.InMemory" Version="0.6.0" />
+		<PackageReference Include="System.Reactive" Version="5.0.0" />
+		<PackageReference Include="Docker.DotNet" Version="3.125.2" />
 	</ItemGroup>
-
 	<ItemGroup>
     <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
   </ItemGroup>
