--- a/Anabasis.EventStore2/Anabasis.EventStore2.csproj
+++ b/Anabasis.EventStore2/Anabasis.EventStore2.csproj
@@ -25,6 +25,7 @@
 	</ItemGroup>
 	<ItemGroup>
     <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+    <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
   </ItemGroup>
 
 </Project>
