--- a/Anabasis.TableStorage/Anabasis.TableStorage.csproj
+++ b/Anabasis.TableStorage/Anabasis.TableStorage.csproj
@@ -3,5 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Azure.Data.Tables" Version="12.5.0" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+	</ItemGroup>
 </Project>
