--- a/Anabasis.Identity/Anabasis.Identity.csproj
+++ b/Anabasis.Identity/Anabasis.Identity.csproj
@@ -1,9 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<OutputType>Library</OutputType>
+		<LangVersion>Latest</LangVersion>
+		<Platforms>AnyCPU;x64</Platforms>
+		<PackageProjectUrl>https://github.com/thomasraynal/Anabasis.EventStore</PackageProjectUrl>
+		<Description>Bootstrap actor based applications with EventStore and DynamicData</Description>
+		<PackageTags>DynamicData;EventStore;EventSourcing;CQRS;Actors</PackageTags>
+		<Authors>Thomas Raynal</Authors>
+		<Company />
+		<Product />
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+
 
   <ItemGroup>
     <ProjectReference Include="..\Anabasis.Api\Anabasis.Api.csproj" />
