--- a/Anabasis.ProtoActor/Anabasis.ProtoActor.csproj
+++ b/Anabasis.ProtoActor/Anabasis.ProtoActor.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Proto.Actor" Version="0.33.0" />
+    <PackageReference Include="Proto.Persistence" Version="0.33.0" />
+  </ItemGroup>
+
 </Project>
