--- a/Anabasis.ProtoActor.Tests/Anabasis.ProtoActor.Tests.csproj
+++ b/Anabasis.ProtoActor.Tests/Anabasis.ProtoActor.Tests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Lamar" Version="10.0.0" />
+		<PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="10.0.0" />
 		<PackageReference Include="nunit" Version="3.13.3" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
