--- a/Anabasis.ProtoActor/Anabasis.ProtoActor.csproj
+++ b/Anabasis.ProtoActor/Anabasis.ProtoActor.csproj
@@ -1,10 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+
+<PropertyGroup>
+	<TargetFramework>net6.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<OutputType>Library</OutputType>
+	<LangVersion>Latest</LangVersion>
+	<Platforms>AnyCPU;x64</Platforms>
+	<PackageProjectUrl>https://github.com/thomasraynal/Anabasis.EventStore</PackageProjectUrl>
+	<Description>Bootstrap actor based applications with EventStore and DynamicData</Description>
+	<PackageTags>DynamicData;EventStore;EventSourcing;CQRS;Actors</PackageTags>
+	<Authors>Thomas Raynal</Authors>
+	<Company />
+	<Product />
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Proto.Actor" Version="0.33.0" />
