asp.net builders

--- a/Anabasis.ProtoActor.AspNet/Anabasis.ProtoActor.AspNet.csproj
+++ b/Anabasis.ProtoActor.AspNet/Anabasis.ProtoActor.AspNet.csproj
@@ -14,5 +14,11 @@
 		<Product />
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Anabasis.Api\Anabasis.Api.csproj" />
+	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+	  <ProjectReference Include="..\Anabasis.ProtoActor\Anabasis.ProtoActor.csproj" />
+	</ItemGroup>
 	
 </Project>
