--- a/Anabasis.ProtoActor.Tests/Anabasis.ProtoActor.Tests.csproj
+++ b/Anabasis.ProtoActor.Tests/Anabasis.ProtoActor.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -12,10 +12,17 @@
 		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
 	    <PackageReference Include="NSubstitute" Version="4.4.0" />
+		<PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.10" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+		<PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+		<PackageReference Include="Serilog.Sinks.InMemory" Version="0.11.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Anabasis.Api\Anabasis.Api.csproj" />
 	  <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+	  <ProjectReference Include="..\Anabasis.ProtoActor.AspNet\Anabasis.ProtoActor.AspNet.csproj" />
 	  <ProjectReference Include="..\Anabasis.ProtoActor\Anabasis.ProtoActor.csproj" />
 	</ItemGroup>
 
